# Proyecto-Scrabble

ListaFichas/: CMakeLists.txt  ListaFichas.cpp  ListaFichas.h  node.cpp  node.h
Scrabble/: Scrabble.pro  Scrabble.pro.user.5ad33a9  listafichas.cpp  listafichas.h  main.cpp  node.cpp  node.h  scrabble.cpp  scrabble.h  scrabble.ui
ScrabbleGame/: BoxScrabble.cpp  BoxScrabble.h  ScrabbleGame.pro  board.cpp  board.h  button.cpp  button.h  game.cpp  game.h  imagenes.qrc  listafichas.cpp  listafichas.h  listafichasplayer.cpp  listafichasplayer.h  listfichasplayer.cpp  listfichasplayer.h  node.cpp  node.h  pieceficha.cpp  pieceficha.h
ScrableServer/: CMakeLists.txt  Lista.h  Server.cpp  Server.h  TrJSON.cpp  TrJSON.h  VerificadorPal.cpp  VerificadorPal.h  con_handler.cpp  con_handler.h  juego.cpp  juego.h  main.cpp
ScrableServer/palabras/: a.txt  b.txt  c.txt  d.txt  e.txt  especiales.txt  f.txt  g.txt  h.txt  i.txt  j.txt  k.txt  l.txt  m.txt  n.txt  nn.txt  o.txt  p.txt  q.txt  r.txt  s.txt  t.txt  u.txt  v.txt  w.txt  x.txt  y.txt  z.txt
